--- a/index.html
+++ b/index.html
@@ -3,31 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Profile</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optional CSS file -->
+    <title>Vishal Soni's GitHub Profile</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            text-align: center;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #00ff00;
+        }
+        .section {
+            padding: 20px;
+            border-bottom: 1px solid #333;
+        }
+        .skills-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .badge {
+            display: inline-block;
+            padding: 10px;
+            background: #333;
+            border-radius: 5px;
+            font-size: 0.9em;
+            margin: 5px;
+        }
+        .stats {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .stats img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #111;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Profile</h1>
-        <p>I'm a software developer skilled in various technologies.</p>
+        <h1>Hello! 👋 I'm Vishal Soni</h1>
+        <p>Seasoned <b>Software Engineer</b> specializing in <b>backend development</b>, <b>DevOps</b>, and <b>cloud infrastructure</b>.</p>
     </header>
-    <section>
-        <h2>🛠️ Skills</h2>
+
+    <div class="section">
+        <h2>🚀 Skills</h2>
+        <div class="skills-grid">
+            <div class="badge">JavaScript (ES6+)</div>
+            <div class="badge">Python (Flask, Django)</div>
+            <div class="badge">TypeScript</div>
+            <div class="badge">SQL (PostgreSQL, MySQL)</div>
+            <div class="badge">AWS (Lambda, EC2, S3)</div>
+            <div class="badge">Azure (AKS)</div>
+            <div class="badge">Pulumi</div>
+            <div class="badge">Docker</div>
+            <div class="badge">Kubernetes</div>
+            <div class="badge">Argo CD</div>
+            <div class="badge">RESTful APIs</div>
+            <div class="badge">GraphQL</div>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>📈 GitHub Stats</h2>
+        <div class="stats">
+            <img src="https://github-readme-stats.vercel.app/api?username=bytewhisperer11&show_icons=true&theme=dark" alt="Vishal's GitHub Stats">
+            <img src="https://github-readme-streak-stats.herokuapp.com/?user=bytewhisperer11" alt="GitHub Streak">
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>🔍 About Me</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>AWS</li>
-            <li>Docker</li>
-            <!-- Add more skills -->
+            <li>🌐 Open to job opportunities worldwide 🌎</li>
+            <li>🧩 Enthusiast of modern cloud architectures, microservices, and object-oriented design</li>
+            <li>📈 Striving to make impactful contributions with scalable solutions</li>
+            <li>🌱 Currently learning advanced TypeScript, OOP, and design patterns</li>
         </ul>
-    </section>
-    <section>
-        <h2>📊 Recent Contributions</h2>
-        <p>Check out my recent contributions on GitHub!</p>
-        <!-- You can embed your GitHub stats here using an iframe or image -->
-    </section>
+    </div>
+
     <footer>
-        <p>Connect with me on <a href="https://twitter.com/yourprofile">Twitter</a>!</p>
+        Looking forward to connecting and collaborating!
     </footer>
 </body>
 </html>
