--- a/index.html
+++ b/index.html
@@ -3,103 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vishal Soni - GitHub Profile</title>
+    <title>Vishal Soni's GitHub Profile</title>
     <style>
         body {
-            margin: 0;
-            font-family: Arial, sans-serif;
             background-color: black;
             color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #1a1a1a;
-        }
-        .title {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .views {
-            font-size: 14px;
-            color: #00ff00;
-        }
-        main {
+            text-align: center;
             padding: 20px;
         }
-        section {
-            margin-bottom: 20px;
+        h1, h2 {
+            color: #00ff00;
         }
-        h2 {
-            color: #ff9900;
+        .section {
+            padding: 20px;
+            border-bottom: 1px solid #333;
         }
-        .badges img {
+        .skills-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .badge {
+            display: inline-block;
+            padding: 10px;
+            background: #333;
+            border-radius: 5px;
+            font-size: 0.9em;
             margin: 5px;
+        }
+        .stats {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .stats img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px;
         }
         footer {
             text-align: center;
-            padding: 10px;
-            background-color: #1a1a1a;
+            padding: 20px;
+            background: #111;
             color: #888;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="title">Vishal Soni - GitHub Profile</div>
-        <div class="views">Total Views: <span id="view-counter">1234</span></div>
+        <h1>Hello! 👋 I'm Vishal Soni</h1>
+        <p>Seasoned <b>Software Engineer</b> specializing in <b>backend development</b>, <b>DevOps</b>, and <b>cloud infrastructure</b>.</p>
     </header>
-    <main>
-        <section>
-            <h2>Hello! 👋 I'm Vishal Soni</h2>
-            <p>I'm a seasoned <strong>Software Engineer</strong> with over 6 years of experience, specializing in <strong>backend development</strong>, <strong>DevOps</strong>, and <strong>cloud infrastructure</strong>. I bring expertise in tools like <strong>Docker</strong>, <strong>Kubernetes</strong>, <strong>Pulumi</strong>, and cloud platforms like <strong>AWS</strong> and <strong>Azure</strong>. My development approach is grounded in <strong>Object-Oriented Programming (OOP)</strong> principles to ensure scalable and maintainable code.</p>
-            <p>I'm currently open to remote job opportunities worldwide and am actively expanding my portfolio of <strong>high-performance backend projects</strong>.</p>
-        </section>
-        <section>
-            <h2>🚀 Skills</h2>
-            <div class="badges">
-                <img src="https://img.shields.io/badge/JavaScript-%23F7DF1E.svg?style=for-the-badge&logo=javascript&logoColor=black" alt="JavaScript">
-                <img src="https://img.shields.io/badge/Python-%2314354C.svg?style=for-the-badge&logo=python&logoColor=white" alt="Python">
-                <img src="https://img.shields.io/badge/TypeScript-%232B7489.svg?style=for-the-badge&logo=typescript&logoColor=white" alt="TypeScript">
-                <img src="https://img.shields.io/badge/SQL-%2300758F.svg?style=for-the-badge&logo=postgresql&logoColor=white" alt="SQL">
-                <img src="https://img.shields.io/badge/AWS-%23232F3E.svg?style=for-the-badge&logo=amazon-aws&logoColor=white" alt="AWS">
-                <img src="https://img.shields.io/badge/Azure-%230072C6.svg?style=for-the-badge&logo=microsoft-azure&logoColor=white" alt="Azure">
-                <img src="https://img.shields.io/badge/Docker-%232496ED.svg?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
-                <img src="https://img.shields.io/badge/Kubernetes-%23326CE5.svg?style=for-the-badge&logo=kubernetes&logoColor=white" alt="Kubernetes">
-                <img src="https://img.shields.io/badge/Terraform-%23623CE4.svg?style=for-the-badge&logo=terraform&logoColor=white" alt="Terraform">
-                <img src="https://img.shields.io/badge/GraphQL-%23E10098.svg?style=for-the-badge&logo=graphql&logoColor=white" alt="GraphQL">
-            </div>
-        </section>
-        <section>
-            <h2>🛠️ Workflow & Tools</h2>
-            <div class="badges">
-                <img src="https://img.shields.io/badge/Git-%23F05032.svg?style=for-the-badge&logo=git&logoColor=white" alt="Git">
-                <img src="https://img.shields.io/badge/Linux-%23FCC624.svg?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
-                <img src="https://img.shields.io/badge/Bash-%234EAA25.svg?style=for-the-badge&logo=gnubash&logoColor=white" alt="Bash">
-                <img src="https://img.shields.io/badge/Node.js-%23339933.svg?style=for-the-badge&logo=node.js&logoColor=white" alt="Node.js">
-                <img src="https://img.shields.io/badge/Vim-%23011A34.svg?style=for-the-badge&logo=vim&logoColor=white" alt="Vim">
-                <img src="https://img.shields.io/badge/VS%20Code-%23007ACC.svg?style=for-the-badge&logo=visual-studio-code&logoColor=white" alt="VS Code">
-            </div>
-        </section>
-        <section>
-            <h2>📈 GitHub Stats</h2>
-            <p><img src="https://github-readme-stats.vercel.app/api?username=bytewhisperer11&show_icons=true&theme=dark" alt="GitHub Stats"></p>
-            <p><img src="https://github-readme-streak-stats.herokuapp.com/?user=bytewhisperer11" alt="GitHub Streak"></p>
-        </section>
-        <section>
-            <h2>🔍 About Me</h2>
-            <ul>
-                <li>🌐 Open to job opportunities worldwide 🌎</li>
-                <li>🧩 Enthusiast of modern cloud architectures, microservices, and object-oriented design</li>
-                <li>📈 Striving to make impactful contributions with scalable solutions</li>
-                <li>🌱 Currently learning advanced TypeScript, OOP, and design patterns</li>
-            </ul>
-        </section>
-    </main>
+
+    <div class="section">
+        <h2>🚀 Skills</h2>
+        <div class="skills-grid">
+            <div class="badge">JavaScript (ES6+)</div>
+            <div class="badge">Python (Flask, Django)</div>
+            <div class="badge">TypeScript</div>
+            <div class="badge">SQL (PostgreSQL, MySQL)</div>
+            <div class="badge">AWS (Lambda, EC2, S3)</div>
+            <div class="badge">Azure (AKS)</div>
+            <div class="badge">Pulumi</div>
+            <div class="badge">Docker</div>
+            <div class="badge">Kubernetes</div>
+            <div class="badge">Argo CD</div>
+            <div class="badge">RESTful APIs</div>
+            <div class="badge">GraphQL</div>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>📈 GitHub Stats</h2>
+        <div class="stats">
+            <img src="https://github-readme-stats.vercel.app/api?username=bytewhisperer11&show_icons=true&theme=dark" alt="Vishal's GitHub Stats">
+            <img src="https://github-readme-streak-stats.herokuapp.com/?user=bytewhisperer11" alt="GitHub Streak">
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>🔍 About Me</h2>
+        <ul>
+            <li>🌐 Open to job opportunities worldwide 🌎</li>
+            <li>🧩 Enthusiast of modern cloud architectures, microservices, and object-oriented design</li>
+            <li>📈 Striving to make impactful contributions with scalable solutions</li>
+            <li>🌱 Currently learning advanced TypeScript, OOP, and design patterns</li>
+        </ul>
+    </div>
+
     <footer>
-        <p>&copy; 2024 Vishal Soni. All rights reserved.</p>
+        Looking forward to connecting and collaborating!
     </footer>
 </body>
 </html>
