Added code to show country flag.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            position: relative;
         }
         header {
             text-align: center;
@@ -52,9 +53,20 @@
             background: #111;
             color: #888;
         }
+        /* India flag positioning */
+        .india-flag {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 40px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
+    <!-- India Flag -->
+    <img class="india-flag" src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="India Flag">
+
     <header>
         <h1>Hello! 👋 I'm Vishal Soni</h1>
         <p>Seasoned <b>Software Engineer</b> specializing in <b>backend development</b>, <b>DevOps</b>, and <b>cloud infrastructure</b>.</p>
